# MOP_CMake

./: CMakeLists.txt  CMakePresets.json  README.md
STM32F4_lib/: CMakeLists.txt
resources/: md407-crt-ram.ld  startup.asm
src/: syscalls.cpp  sysmem.cpp
